other/allowed-pod-priorities/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: allowed-podpriorities
policies:
- ../allowed-pod-priorities.yaml
resources:
- resource.yaml
results:
- kind: Deployment
  policy: allowed-podpriorities
  resources:
  - mydeploy
  result: fail
  rule: validate-pod-priority
- kind: CronJob
  policy: allowed-podpriorities
  resources:
  - hello
  result: pass
  rule: validate-pod-priority-cronjob
- kind: Pod
  policy: allowed-podpriorities
  resources:
  - myapp-pod
  result: pass
  rule: validate-pod-priority-pods
variables: values.yaml
