other/allowed-pod-priorities/.kyverno-test/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: allowed-podpriorities
  resources:
  - name: myapp-pod
    values:
      podprioritydict.data.default: '["high-priority", "moderate-priority", "low-priority"]'
      request.namespace: default
  - name: mydeploy
    values:
      podprioritydict.data.default: '["high-priority", "moderate-priority", "low-priority"]'
      request.namespace: default
  - name: mycronjob
    values:
      podprioritydict.data.production: '["high-priority", "moderate-priority", "low-priority"]'
      request.namespace: production
